--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 before_install:
+  - sudo apt-get -y -q update
   - sudo apt-get -y -q install curl make libgc-dev
   - git clone --depth=1 git://github.com/fasterthanlime/rock.git 
   - (cd rock && make -s quick-rescue)
@@ -6,7 +7,10 @@ before_install:
 
 script:
   - export OOC_LIBS=$PWD
+  - export PKG_CONFIG_PATH=$_PREFIX/lib/pkgconfig
+  - export LD_LIBRARY_PATH=../prefix/lib
   - cd samples
-# - mkdir -p travis
-# - rock -v example -o=travis/example && travis/example
+  - mkdir -p travis
+  - rock -v simple -o=travis/simple
+  - travis/simple
 
